<resources>
    <string name="app_name">旅游地图</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_search">搜索POI</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="search_hint">搜索</string>
    <string name="search_ack">搜索</string>
    <string name="action_search">搜索</string>


    <string name="navigation_head_name">欢迎你，请先登录！！！</string>
    <string name="navigation_menu_checkin">位置签到</string>
    <string name="navigation_menu_geofence">地理围栏</string>
    <string name="navigation_menu_friend">好友管理</string>
    <string name="navigation_menu_around">附近</string>
    <string name="navigation_menu_scene">景点</string>
    <string name="navigation_menu_restaurateur">餐馆</string>
    <string name="navigation_foot_setting">设置</string>
    <string name="navigation_foot_loging">登录</string>
    <string name="navigation_foot_register">注销</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_weibo_sign_in">微博授权登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect or the network is busy or the username is duplicated</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="search_next">下一页</string>
    <string name="marker_around_scene">周边景点</string>
    <string name="marker_around_restaurant">周边餐馆</string>
    <string name="city_code"></string>
    <string name="action_sharelocation">位置分享</string>


    <string name="url_protocol">http</string>
    <string name="url_host">n17459068v.iask.in</string>
    <string name="url_port">33440</string>
    <string name="url_path_user">map/UserServlet</string>
    <string name="title_activity_fence">地理围栏</string>
    <string name="title_activity_friend">好友管理</string>
    <string name="title_activity_scene">周边</string>
    <string name="title_activity_restaurant">周边餐馆</string>
    <string name="title_tab1_fence">添加围栏</string>
    <string name="title_tab2_fence">查看围栏</string>
    <string name="title_tab1_friend">添加好友</string>
    <string name="title_tab2_friend">查看好友</string>
    <string name="text_username">用户名：</string>
    <string name="text_authcode">验证码：</string>
    <string name="bt_sendcode">获取验证码</string>
    <string name="hint_username">example@qq.com</string>
    <string name="hint_authcode">****</string>
    <string name="bt_ack">确认</string>
    <string name="bt_cancel">取消</string>
    <string name="bt_codesended">验证码已发送</string>
    <string name="url_path_friend">map/FriendServlet</string>
    <string name="url_path_fence">map/FenceServlet</string>
    <string name="text_latitude">纬度：</string>
    <string name="title_activity_checkin">签到</string>
    <string name="url_path_checkin">map/CheckinServlet</string>
    <string name="bt_more">下一页</string>
    <string name="navigation_menu_hotel">酒店</string>
    <string name="marker_around_hotel">周边酒店</string>
    <string name="navigation_menu_bank">银行</string>
    <string name="marker_around_bank">周边银行</string>
    <string name="title_activity_profile">个人中心</string>
    <string name="bt_truck">货车</string>
    <string name="bt_cycle">自行车</string>
    <string name="bt_bus">公交车</string>
    <string name="bt_walk">步行</string>
    <string name="bt_car">驾车</string>
    <string name="title_activity_path">路径规划</string>
    <string name="action_go">去那里</string>
    <string name="action_comment">评论</string>
    <string name="action_share">分享</string>
    <string name="title_activity_comment">评论</string>
    <string name="title_activity_path_detail">路径详情</string>
    <string name="bt_previous"><![CDATA[<]]></string>
    <string name="bt_next"><![CDATA[>]]></string>
    <string name="action_del">删除</string>
    <string name="data_is_null">暂时没有数据</string>
    <string name="url_path_comment">map/CommentServlet</string>
    <string name="bt_comment">评论</string>
    <string name="comment_hint">参与评论</string>
    <string name="title_activity_message">留言</string>
    <string name="bt_message">留言</string>
    <string name="url_path_message">map/MessageServlet</string>
    <string name="bt_less">上一页</string>
    <string name="search_pre">上一页</string>


</resources>
