<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_checkin"
            android:icon="@mipmap/ic_menu_checkin"
            android:title="@string/navigation_menu_checkin" />
        <item
            android:id="@+id/nav_geofence"
            android:icon="@mipmap/ic_menu_geofence"
            android:title="@string/navigation_menu_geofence" />
        <item
            android:id="@+id/nav_friend"
            android:icon="@mipmap/ic_menu_friend"
            android:title="@string/navigation_menu_friend" />

    </group>

    <item android:title="@string/navigation_menu_around">
        <menu>
            <item
                android:id="@+id/nav_scene"
                android:icon="@mipmap/ic_menu_scene"
                android:title="@string/navigation_menu_scene" />
            <item
                android:id="@+id/nav_restaurateur"
                android:icon="@mipmap/ic_menu_restaurateur"
                android:title="@string/navigation_menu_restaurateur" />
        </menu>
    </item>

</menu>
