<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/line1_add_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_username" />
        <com.nomad.view.ClearEditText
            android:id="@+id/edit_username"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2_add_friend"
        android:layout_below="@id/line1_add_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_authcode" />
        <com.nomad.view.ClearEditText
            android:id="@+id/edit_authcode"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:hint="@string/hint_authcode"/>
        <Button
            android:id="@+id/bt_code_send"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/bt_sendcode"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/line3_add_friend"
        android:layout_below="@id/line2_add_friend"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bt_ack_addfriend"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content"
            android:text="@string/bt_ack"/>
        <Button
            android:id="@+id/bt_cancel_addfriend"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content"
            android:text="@string/bt_cancel"/>

    </LinearLayout>

</RelativeLayout>