<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <com.amap.api.maps.MapView
        android:id="@+id/map_path"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/line_path"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_path_car"
            android:gravity="center"
            android:text="@string/bt_car"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#fff"
            android:textColor="@color/btn_text_selector"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/bt_path_walk"
            android:gravity="center"
            android:text="@string/bt_walk"
            android:layout_width="0dp"
            android:background="#fff"
            android:layout_weight="1"
            android:textColor="@color/btn_text_selector"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/bt_path_bus"
            android:gravity="center"
            android:background="#fff"
            android:text="@string/bt_bus"
            android:layout_width="0dp"
            android:textColor="@color/btn_text_selector"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/bt_path_cycle"
            android:gravity="center"
            android:text="@string/bt_cycle"
            android:background="#fff"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/btn_text_selector"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:background="#fff"
        android:layout_above="@id/line_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_previous"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#b4925f"
            android:background="#0000"
            android:layout_height="wrap_content"
            android:text="@string/bt_previous"/>
        <TextView
            android:id="@+id/tv_path"
            android:gravity="center"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:layout_weight="5"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/bt_next"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#b4925f"
            android:background="#0000"
            android:layout_height="wrap_content"
            android:text="@string/bt_next"/>
    </LinearLayout>
</RelativeLayout>