<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nomad.around.AroundActivity">
    <ListView
        android:id="@+id/lv_show_scene"
        android:divider="#e1dddd"
        android:dividerHeight="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"/>
    <TextView
        android:id="@+id/empty_list_around"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/data_is_null"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/bt_less_scene"
            android:text="@string/bt_less"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/bt_more_scene"
            android:text="@string/bt_more"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            />

    </LinearLayout>

</LinearLayout>
