<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_marker_city"
            android:layout_width="0dp"
            android:gravity="center_vertical"
            android:layout_weight="6"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/image_around_go"
            android:src="@drawable/ic_go"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_marker_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:textColor="@android:color/holo_red_light"
            android:id="@+id/bt_around_scene"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marker_around_scene"
            android:layout_weight="1"/>
        <Button
            android:textColor="@android:color/holo_red_light"
            android:id="@+id/bt_around_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marker_around_restaurant"
            android:layout_weight="1"/>
        <Button
            android:textColor="@android:color/holo_red_light"
            android:id="@+id/bt_around_hotel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marker_around_hotel"
            android:layout_weight="1"/>
        <Button
            android:textColor="@android:color/holo_red_light"
            android:id="@+id/bt_around_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marker_around_bank"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>