<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/image_comment_location"
            android:src="@drawable/checkin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="normal"
                android:textColor="#7158e2ab"
                android:id="@+id/tv_comment_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textStyle="bold"
                android:textColor="#f25a4f"
                android:id="@+id/tv_comment_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.nomad.view.ClearEditText
            android:id="@+id/edit_comment"
            android:layout_width="0dp"
            android:hint="@string/comment_hint"
            android:layout_weight="5"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/bt_comment"
            android:layout_width="0dp"
            android:text="@string/bt_comment"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_height="match_parent" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_show_comment"
        android:divider="#e1dddd"
        android:dividerHeight="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <TextView
        android:id="@+id/empty_list_comment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/data_is_null"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone"/>

</LinearLayout>