<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.amap.api.maps.MapView
        android:id="@+id/map_fence"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <LinearLayout
        android:background="#fff"
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/text_latitude"/>
        <EditText
            android:id="@+id/edit_latitude"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:editable="false"
            android:singleLine="true"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/text_latitude"/>
        <EditText
            android:id="@+id/edit_longitude"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:editable="false"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/text_latitude"/>
        <EditText
            android:id="@+id/edit_radius"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:background="#fff"
        android:layout_below="@id/line1"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_ack_addfence"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content"
            android:text="@string/bt_ack"/>
        <Button
            android:id="@+id/bt_cancel_addfence"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content"
            android:text="@string/bt_cancel"/>
    </LinearLayout>
</RelativeLayout>
